<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".docfragment.DocCreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView

                android:layout_weight="0.2"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="姓名："></TextView>
            <EditText
                android:id="@+id/et_create_name"
                android:layout_weight="0.9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="请输入姓名"
                android:inputType="text"
                android:textSize="15dp"
                android:textAlignment="center"
                android:textColor="#7F7F7F"
                ></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="0.2"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="年龄："></TextView>
            <EditText
                android:id="@+id/et_create_age"
                android:layout_weight="0.9"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="请输入年龄"
                android:textSize="15dp"
                android:textAlignment="center"
                android:textColor="#7F7F7F"
                ></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_sex"
                android:layout_weight="0.2"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="性别："></TextView>
            <Spinner
                android:id="@+id/spinner_sex"
                android:layout_weight="0.9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_sex"
                android:entries="@array/sex"
                android:textAlignment="center"
                android:textColor="#7F7F7F"
                ></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_docname"
                android:layout_weight="0.25"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="医生："></TextView>
            <Spinner
                android:id="@+id/spinner_docname"
                android:layout_weight="0.9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_docname"
                android:entries="@array/docname"
                android:textAlignment="center"
                android:textColor="#7F7F7F"
                ></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_itemname"
                android:layout_weight="0.2"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="项目名称："></TextView>
            <Spinner
                android:id="@+id/spinner_itemname"
                android:layout_weight="0.9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_itemname"
                android:entries="@array/item"
                android:spinnerMode="dialog"
                android:textAlignment="center"
                android:textColor="#7F7F7F"
                ></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_weight="0.1"
                android:layout_width="wrap_content"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="开始时间:"/>

            <TextView
                android:layout_weight="0.9"
                android:id="@+id/tv_startdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="请选择时间"/>


            <Button
                android:id="@+id/btn_selectdate"
                android:layout_weight="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectcreatedate"
                android:text="选择"
                ></Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_chargesitu"
                android:layout_weight="0.2"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="缴费情况："></TextView>
            <Spinner
                android:id="@+id/spinner_chargesitu"
                android:layout_weight="0.9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_charge"
                android:entries="@array/charge"
                android:textAlignment="center"
                android:textColor="#7F7F7F"
                ></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_informletter"
                android:layout_weight="0.2"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="知情同意书："></TextView>
            <Spinner
                android:id="@+id/spinner_informletter"
                android:layout_weight="0.9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_inform"
                android:entries="@array/inform"
                android:textAlignment="center"
                android:textColor="#7F7F7F"
                ></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <!-- 展示上传的图片 -->
        <LinearLayout
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- 上传的图片，最多三张 -->
            <ImageView
                android:layout_weight="1"
                android:id="@+id/img_upload_1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:visibility="gone"
 />

            <ImageView
                android:layout_weight="1"
                android:id="@+id/img_upload_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:visibility="gone"
 />

            <ImageView
                android:layout_weight="1"
                android:id="@+id/img_upload_3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:visibility="gone"
 />

        </LinearLayout>
            <!-- 上传图片按钮 -->
            <Button
                android:id="@+id/upload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="uploadimg"
                android:text="上传图片" />
        <Button
            android:id="@+id/btn_createItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="createitem"
            android:text="创建"></Button>
    </LinearLayout>
    <!-- TODO: Update blank fragment layout -->
</LinearLayout>
</FrameLayout>